Fixed some alignment issues with the icons on the contacts card. Also trying to troubleshoot formspree.

--- a/css/main.css
+++ b/css/main.css
@@ -1392,6 +1392,7 @@ body h4{
   margin-bottom: 20px;
   margin-left: 20px;
   margin-right: 20px;
+  width: 175px;
 }
 
 .contact-card-icons div a{
